force-app/main/default/objects/TriggerDefinition__mdt/TriggerDefinition__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Definition</label>
    <pluralLabel>Trigger Definitions</pluralLabel>
</CustomObject>