force-app/main/default/objects/TriggerDefinition__mdt/fields/acceptReentrancy__c.field-meta.xml
<CustomField>
    <fullName>acceptReentrancy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checkbox is active, this trigger can be executed multiple times in a single transaction.</inlineHelpText>
    <label>Accept reentrancy</label>
    <type>Checkbox</type>
</CustomField>