force-app/main/default/objects/TriggerDefinition__mdt/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <inlineHelpText>Put the name of the apex class here, which implements the trigger framework.</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>