force-app/main/default/objects/TriggerDefinition__mdt/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>before</fullName>
                <default>true</default>
                <label>before</label>
            </value>
            <value>
                <fullName>after</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>