force-app/main/default/objects/TriggerDefinition__mdt/fields/isDelete__c.field-meta.xml
<CustomField>
    <fullName>isDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>