force-app/main/default/objects/TriggerDefinition__mdt/fields/isInsert__c.field-meta.xml
<CustomField>
    <fullName>isInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insert</label>
    <type>Checkbox</type>
</CustomField>