force-app/main/default/objects/TriggerDefinition__mdt/fields/isUndelete__c.field-meta.xml
<CustomField>
    <fullName>isUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undelete</label>
    <type>Checkbox</type>
</CustomField>