force-app/main/default/objects/TriggerDefinition__mdt/fields/isUpdate__c.field-meta.xml
<CustomField>
    <fullName>isUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>