force-app/main/default/objects/TriggerDefinition__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <inlineHelpText>Put the name of the sObject here, which fires the trigger.</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>