force-app/main/default/objects/TriggerDefinition__mdt/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <inlineHelpText>All triggers are executed in a ascending order by this number for this object.</inlineHelpText>
    <label>Order Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>